tdf#156361 use slow blending path if alpha mask blending is diabled

SkiaSalGraphicsImpl::blendBitmap() fails unexpectedly in the following
cases so return false and use the non-Skia alpha mask blending code:
- Unexpected white areas when running a slideshow or printing:
    https://bugs.documentfoundation.org/attachment.cgi?id=188447
- Unexpected scaling of bitmap and/or alpha mask when exporting to PDF:
    https://bugs.documentfoundation.org/attachment.cgi?id=188498

Change-Id: I13ae613f24bff4cd018110a08ed70559a1714687
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154690
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>