vcl/skia/gdiimpl.cxx
@@ -1297,6 +1297,16 @@ bool SkiaSalGraphicsImpl::blendAlphaBitmap(const SalTwoRect& rPosAry,
                                            const SalBitmap& rMaskBitmap,
                                            const SalBitmap& rAlphaBitmap)
 {
+    // tdf#156361 use slow blending path if alpha mask blending is diabled
+    // SkiaSalGraphicsImpl::blendBitmap() fails unexpectedly in the following
+    // cases so return false and use the non-Skia alpha mask blending code:
+    // - Unexpected white areas when running a slideshow or printing:
+    //     https://bugs.documentfoundation.org/attachment.cgi?id=188447
+    // - Unexpected scaling of bitmap and/or alpha mask when exporting to PDF:
+    //     https://bugs.documentfoundation.org/attachment.cgi?id=188498
+    if (!SkiaHelper::isAlphaMaskBlendingEnabled())
+        return false;
+
     if (checkInvalidSourceOrDestination(rPosAry))
         return false;
 
